# data_science_speedrun_journey

./: LICENSE  README.md  requirements.txt
Statistics and Probability/: sampling_techniques.ipynb  types_of_statistics.ipynb
algebra/: algebra_roadmap.ipynb  functions.ipynb  linear_functions.ipynb
basic_math/: arithmetic_in_fraction_equations.ipynb  laws_of_exponents.ipynb  roots.ipynb
fractions/: fractions.ipynb
linear_algebra/: exercises.ipynb  overview.ipynb  relationship_to_arrays.ipynb  vector_visualization.ipynb
linear_regression/: another_linear_regression.ipynb  finally_i_understand_linear_regression.ipynb  linear_regression.ipynb  price_prediction_by_length.csv
numpy/: advanced_indexing.ipynb  arithmetic_operations.ipynb  auto_fill_arrays.ipynb  basic_indexing.ipynb  manipulating_arrays.ipynb  methods.ipynb  numpy.ipynb  numpy_array.ipynb  python_list.ipynb  structuring_arrays.ipynb
others/: get_fibonacci.ipynb  sort_array.ipynb
pandas/: Customer Call List (Cleaned).csv  Customer Call List.csv  aggregation.ipynb  cleaning_data.ipynb  coffee.csv  data_frame_looping.ipynb  data_frame_methods.ipynb  dtypes.ipynb  exercises.ipynb  filtering.ipynb  grouping.ipynb  intro_to_data_frames.ipynb  loc_iloc.ipynb  mapping.ipynb
plotly/: bar_charts.ipynb  line_charts.ipynb  scatter_plots.ipynb
polars/: data_frame_overview.ipynb  series_overview.ipynb
postgresql/: create_actors_table.ipynb  create_financials_table.ipynb  create_languages_table.ipynb  create_user_table.ipynb  (+15 more)
utils/: README.md  pyproject.toml
utils/src/utils/: __init__.py  display_pdf.py
(+62 files in other folders)
