[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utils"
version = "1.0.0"
authors = [
  { name="Daffa Ilhami", email="mdaffailhami@gmail.com" },
]
description = "A Python package that contains utilities"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mdaffailhami/data_science_speedrun_journey"
Issues = "https://github.com/mdaffailhami/data_science_speedrun_journey/issues"